--- a/angular-tour-of-heroes/angular.json
+++ b/angular-tour-of-heroes/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-tour-of-heroes"
+    }
+  },
+  "defaultProject": "angular-tour-of-heroes",
+  "cli": {
+    "analytics": "9e1b51ad-740d-468e-9f7f-651e188b8987"
+  }
 }
